--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -496,32 +496,32 @@
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom1.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom1.jpg" alt="img04">
                                 </figure>
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom2.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom2.jpg" alt="img04">
                                 </figure>
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom3.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom3.jpg" alt="img04">
                                 </figure>
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom4.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom4.jpg" alt="img04">
                                 </figure>
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom5.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom5.jpg" alt="img04">
                                 </figure>
                             </div>
                             <div class="grid-item col-md-4 col-sm-6 col-xs-12 ecom">
                                 <figure>
-                                    <img src="/static/assets/images/portfolio/ecom6.png" alt="img04">
+                                    <img src="/static/assets/images/portfolio/ecom6.jpg" alt="img04">
                                 </figure>
                             </div>
                         </div> <!-- End: .grid .project-gallery -->
