--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -392,8 +392,7 @@
                                 <!-- Education Institutes-->
                                 <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s"
                                     data-wow-delay="0.4s">
-                                    <h4><a href="/static/assets/images/portfolio/brand3.jpg" data-fancybox
-                                            data-src="#ct1">AWS- OTP- AWSD15: AWS Cloud Practitioner Essentials </a>|
+                                    <h4><a href="" data-fancybox data-src="#ct1">AWS- OTP- AWSD15: AWS Cloud Practitioner Essentials </a>|
                                         AWS, edex</h4>
                                     <div class="mh-eduyear">June’2024</div>
 
@@ -401,16 +400,14 @@
                                 <!-- Education Institutes-->
                                 <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s"
                                     data-wow-delay="0.4s">
-                                    <h4><a href="/static/assets/images/portfolio/brand3.jpg" data-fancybox
-                                            data-src="#ct2">CC0101EN: Introduction to Cloud Computing </a>| IBM, edex</h4>
+                                    <h4><a href="" data-fancybox data-src="#ct2">CC0101EN: Introduction to Cloud Computing </a>| IBM, edex</h4>
                                     <div class="mh-eduyear">June’2024</div>
 
                                 </div>
                                 <!-- Education Institutes-->
                                 <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s"
                                     data-wow-delay="0.4s">
-                                    <h4><a href="/static/assets/images/portfolio/brand3.jpg" data-fancybox
-                                            data-src="#ct3">LFS162x: Introduction to DevOps and Site Reliability
+                                    <h4><a href="" data-fancybox data-src="#ct3">LFS162x: Introduction to DevOps and Site Reliability
                                             Engineering</a>| The Linux Foundation, edx</h4>
                                     <div class="mh-eduyear">June’2024</div>
 
