--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -1,17 +1,24 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>joseyawovi - Personal CV </title>
+        <title>joseyawovi - Personal CV</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Maha Personal cv/resume template for professional and personal website." />
+        <meta name="description" content="Yawovi Joseph Essossima professional and personal website." />
         <meta name="keywords"
-            content="creative, cv, designer,  online cv, online resume, powerful portfolio, professional, professional resume, responsive, resume, vcard " />
+            content="creative, cv, designer, online cv, online resume, powerful portfolio, professional, professional resume, responsive, resume, vcard " />
         <meta name="developer" content="Md. Siful Islam">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-        <!-- FAV AND ICONS   -->
+        <!-- Open Graph meta tags for link preview -->
+        <meta property="og:title" content="Yawovi Joseph Essossima - Professional CV">
+        <meta property="og:description" content="Visit my personal website to view my resume and portfolio.">
+        <meta property="og:image" content="/static/assets/images/pic.jpeg">
+        <meta property="og:url" content="https://joseyawovi.pythonanywhere.com/">
+        <meta property="og:type" content="website">
+    
+        <!-- FAV AND ICONS -->
         <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
         <link rel="shortcut icon" href="/static/assets/images/apple-icon.png">
         <link rel="shortcut icon" sizes="72x72" href="/static/assets/images/apple-icon-72x72.png">
@@ -42,8 +49,8 @@
         <link rel="alternate stylesheet" href="/static/assets/css/colors/purple.css" title="purple">
         <link rel="alternate stylesheet" href="/static/assets/css/colors/slate.css" title="slate">
         <link rel="alternate stylesheet" href="/static/assets/css/colors/yellow.css" title="yellow">
-    
     </head>
+    
 
 <body class="dark-vertion black-bg">
 {% include "portfolio/components/header.html" %}
